# it-ops-toolkit

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  _debug.py  ops.yaml  pyproject.toml
docs/: 00-project-vision.md  01-architecture-overview.md  02-module-map.md  03-roadmap.md  04-development-rules.md  05-documentation-workflow.md  06-current-status-and-handoff.md  AI-HANDOVER.md  cli-command-design.md  config-schema.md  data-model.md  deployment-model.md  glossary.md  probe-adapter-interface.md  risk-policy.md
docs/adr/: 0001-platform-first-cli-first.md  0002-phase-1-python-first.md  0003-phase-1-typer-cli.md  0004-phase-1-yaml-config.md  0005-phase-1-sqlite-storage.md  0006-phase-1-report-formats.md  0007-ai-integration-strategy.md  0008-scheduling-and-notification-architecture.md  0009-network-topology-and-asset-relationships.md  0010-controlled-agent-workflow.md  README.md
docs/modules/: README.md  agent-runner.md  ai-copilot.md  asset-topology.md  automation.md  config-center.md  credential-management.md  data-store.md  diagnosis.md  health-check.md  knowledge-base.md  notification-center.md  observability.md  permission-audit.md  plugin-system.md  reporting.md  scheduler.md  security-compliance.md  snmp.md
docs/plans/: phase-1-cli-foundation.md  phase-10-web-ops-center.md  phase-11-schedule-web-and-packaging.md  (+2 more)
tests/: test_agent_workflow.py  test_ai_copilot.py  test_alert_engine.py  test_assets.py  test_automation.py  test_cli.py  test_config.py  test_diagnosis.py  test_dns_probe.py  test_export.py  test_health.py  test_health_matrix.py  test_http_matrix.py  test_local_collect.py  test_notify.py  test_ping.py  test_reports.py  test_scheduler.py  test_security.py  test_snmp.py  test_storage.py  test_topology.py  test_trend.py  test_web.py
(+38 files in other folders)
